<resources>
    <string name="app_name">Vegetables</string>
    <string name="login_account">账号</string>
    <string name="loin_input_account">请输入账号</string>
    <string name="login_password">密码</string>
    <string name="loin_input_password">请输入密码</string>
    <string name="login_login">登录</string>
    <string name="registe">注册</string>
    <string name="quit_login">快捷登录</string>
    <string name="select_service">选择服务</string>
    <string name="i_will_buy">我要买菜</string>
    <string name="i_will_sell">我要卖菜</string>
    <string name="home_page">首页</string>
    <string name="shopping_car">购物车</string>
    <string name="mine">我的</string>
</resources>
